# Enterprise-AI-Orchestration-Platform

./: .env.example  .gitignore  CHANGELOG.md  EIO_Enhancement_Document_2_Intelligent_Planning_Adaptive_Orchestration.docx  Enhancement Request – Enterprise Intelligence Orchestrator (EIO).docx  Enterprise Intelligence Orchestrator Architecture.docx  IBM_Bob_Prompt_Sample.txt  PROJECT_MEMORY.md  README.md  docker-compose.yml  eio-complete-question-guide.html  eio-plan.md  import_check.py  infeasibility_test.py  pyproject.toml  requirements.txt  show_db.py  smoke_test.py
docker/api/: Dockerfile
docker/ui/: Dockerfile
eio/agents/: __init__.py  base.py  business_glossary_agent.py  data_quality_agent.py  database_execution_agent.py  document_retrieval_agent.py  lineage_agent.py  metadata_discovery_agent.py  migration_reconciliation_agent.py  planner_agent.py  rag_agent.py  response_synthesis_agent.py  semantic_schema_agent.py  sql_generation_agent.py  sql_validation_agent.py
eio/api/: main.py  schemas.py
eio/api/routes/: __init__.py  config.py  health.py  models.py  query.py
eio/connectors/databases/: __init__.py  base.py  registry.py  sqlite_connector.py
eio/connectors/llm/: __init__.py  base.py  gptoss_provider.py  ica_provider.py  mock_provider.py  openai_provider.py  registry.py  router.py
eio/connectors/storage/: __init__.py  base.py  local_connector.py  (+1 more)
eio/core/: ai_decision_engine.py  knowledge_advisor.py  llm_pricing.py  model_capability_registry.py  model_health_registry.py  multi_source_fallback.py  registries.py  user_context.py
eio/ui/: app.py
(+19 files in other folders)
