[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "eio"
version = "0.1.0"
description = "Enterprise Intelligence Orchestrator — multi-agent AI orchestration platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["eio*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
